# MLChemAD

./: LICENSE  README.md  setup.cfg
src/mlchemad/: __init__.py  _data.py  applicability_domains.py  base.py  data.json  data.py  fisher1936.json  hemmerich2020.json  mekenyan1993.json  utils.py
test/: test_ad.py
