[metadata]
name = mlchemad
version = attr: mlchemad.__version__
description = Applicability domains for cheminformactics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OlivierBeq/mlchemad
author = Olivier J.M. Béquignon
author_email = olivier.bequignon.maintainer@gmail.com
maintainer = Olivier J.M. Béquignon
maintainer_email = olivier.bequignon.maintainer@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
    applicability domain
    cheminformatics
    outlier molecule detection
    out-of-distribution detection
    machine learning


[options]
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    numpy
    scipy
    scikit-learn>1.2.2
    pandas


[options.packages.find]
where = src


[options.package_data]
* = *.*

docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest
